# smgl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: utah_teapot_bezier.txt
lib/aabb/: CMakeLists.txt  aabb.cpp  aabb.h
lib/bezier/: CMakeLists.txt  bezier.cpp  bezier.h
lib/camera/: CMakeLists.txt  camera.cpp  camera.h
lib/color/: CMakeLists.txt  color.cpp  color.h
lib/light/: CMakeLists.txt  directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
lib/matrix3x3/: CMakeLists.txt  matrix3x3.cpp  matrix3x3.h
lib/mesh/: CMakeLists.txt  mesh.cpp  mesh.h
lib/shape/: CMakeLists.txt  shape.cpp  shape.h
lib/sphere/: CMakeLists.txt  sphere.cpp  sphere.h
lib/stb/: CMakeLists.txt
lib/triangle/: CMakeLists.txt  triangle.cpp  triangle.h
lib/vector3d/: CMakeLists.txt  vector3d.cpp  vector3d.h
